<resources>
    <string name="app_name">Linko</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="optional_phone_number">(Optional) Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="organize_an_event">Organize an Event</string>
    <string name="you_have_not_organized_any_events">You have not organized any events!</string>
    <string name="you_have_not_registered_in_any_events">You have not registered in any events!</string>
    <string name="there_are_currently_no_available_events">There are currently no available events.</string>
    <string name="are_you_sure_you_want_to_delete_your_profile">Are you sure you want to delete your profile?</string>
    <string name="no_go_back">No, Go Back</string>
    <string name="yes_delete_profile">Yes, Delete Profile</string>
    <string name="event_history">Event History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="receive_no_notifications">You will not receive any notifications</string>
    <string name="silence_notifications">Notifications Silenced</string>
    <string name="receive_organizer_and_admin_notifications">You will receive organizer notifications</string>
    <string name="all_notifications">Notifications Enabled</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="lottery_system_guidelines">Lottery System Guidelines</string>
    <string name="notifications">Toggle Notifications</string>
</resources>