<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/lightestBlue">

    <View
        android:id="@+id/top_status_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkestBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:background="@drawable/circular_profile"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_status_bar"
        app:srcCompat="@drawable/outline_person_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_event_history"
        android:layout_width="0dp"
        android:paddingTop="5dp"
        android:layout_height="0dp"
        android:background="@color/lightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_event_history"
        app:layout_constraintStart_toStartOf="@+id/text_event_history"
        app:layout_constraintTop_toBottomOf="@+id/text_event_history" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/name"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile" />

    <TextView
        android:id="@+id/text_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/email"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_user_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <TextView
        android:id="@+id/text_user_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/phone_number"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_profile" />


    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/darkerBlue"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/text_user_number"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_number" />

    <TextView
        android:id="@+id/text_event_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_tops_dark_teal"
        android:padding="5dp"
        android:text="@string/event_history"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_profile" />

    <include layout="@layout/navigation_bar"/>



</androidx.constraintlayout.widget.ConstraintLayout>